Fix export button getting stuck on top of the TreeTable

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -942,6 +942,7 @@ map-view {
   .p-dialog-content {
     display: flex;
     flex-direction: column;
+    flex: 1 1 auto;
     min-height: 0;
   }
 
